--- a/.github/workflows/lgtm.yml
+++ b/.github/workflows/lgtm.yml
@@ -13,9 +13,9 @@ on:
 jobs:
   lgtm:
     runs-on: ubuntu-latest
+    if: >-
+        contains(github.event.comment.body, 'lgtm')　|| contains(github.event.review.body, 'lgtm')
     steps:
-      - if: >-
-      - contains(github.event.comment.body, 'lgtm')　|| contains(github.event.review.body, 'lgtm')
       - run: echo test lgtm
         with:
-          github-token: ${{secrets.GITHUB_TOKEN}}
+          run-name: ${{ github.actor }}
