--- a/.github/workflows/lgtm.yml
+++ b/.github/workflows/lgtm.yml
@@ -19,4 +19,4 @@ jobs:
     steps:
       - run: echo test lgtm
         with:
-          run-name: ${{ github.actor }}
+          github-token: ${{secrets.GITHUB_TOKEN}}
